Hỗ trợ tìm theo nguyên liệu nấu ăn

--- a/Cuisine/Cuisine.csproj
+++ b/Cuisine/Cuisine.csproj
@@ -229,6 +229,8 @@
     <Content Include="Views\Search\Index.cshtml" />
     <Content Include="Views\Search\Search.cshtml" />
     <Content Include="Views\Search\Detail.cshtml" />
+    <Content Include="Views\Search\Material.cshtml" />
+    <Content Include="Views\Search\SearchMaterial.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
