--- a/Cuisine/Cuisine.csproj
+++ b/Cuisine/Cuisine.csproj
@@ -174,6 +174,16 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\cooking-logo-shadow.png" />
     <Content Include="Content\Images\cooking-logo.png" />
+    <Content Include="Content\Images\mon-an\s1.jpg" />
+    <Content Include="Content\Images\mon-an\s10.jpg" />
+    <Content Include="Content\Images\mon-an\s2.jpg" />
+    <Content Include="Content\Images\mon-an\s3.jpg" />
+    <Content Include="Content\Images\mon-an\s4.jpg" />
+    <Content Include="Content\Images\mon-an\s5.jpg" />
+    <Content Include="Content\Images\mon-an\s6.jpg" />
+    <Content Include="Content\Images\mon-an\s7.jpg" />
+    <Content Include="Content\Images\mon-an\s8.jpg" />
+    <Content Include="Content\Images\mon-an\s9.jpg" />
     <Content Include="Content\Images\nguyen-lieu\s1.jpg" />
     <Content Include="Content\Images\nguyen-lieu\s10.jpg" />
     <Content Include="Content\Images\nguyen-lieu\s11.jpg" />
